--- a/index.html
+++ b/index.html
@@ -207,25 +207,24 @@
 <body>
   <h1>Berita Orang Hilang</h1>
   <main>
-    <div class="photo-container" tabindex="0" aria-label="Foto Hanafi yang hilang, seorang pemuda berumur 17 tahun berpakaian hoodie merah dan celana jeans pendek">
+    <div class="photo-container" tabindex="0" aria-label="Foto Kahlil yang hilang, seorang pemuda berumur 18 tahun berpakaian hoodie hitam dan celana longgar">
       <img
-        src="ham.jpg"
-        alt="Potret seorang pemuda berusia 17 tahun bernama Hanafi yang mengenakan hoodie merah dan celana jeans pendek, dengan latar belakang hitam. Foto ini digunakan sebagai bagian berita orang hilang."
+        src="IMG-20250602-WA0267.jpeg"
+        alt="Potret seorang pemuda berusia 18 tahun bernama Kahlil yang mengenakan hoodie hitam dan celana longgar. Foto ini digunakan sebagai bagian berita orang hilang."
         width="400"
         height="500"
       />
     </div>
     <section class="description" role="region" aria-labelledby="info-title">
-      <p><strong>Nama:</strong> Ilham</p>
-      <p><strong>Umur:</strong> 17 tahun</p>
-      <p><strong>Alamat:</strong> gunung saren</p>
-      <p><strong>Terakhir Dilihat:</strong> Kemarin</p>
-      <p><strong>Pakaian Terakhir:</strong> kaos hitam dan celana jeans gombrong terakhir di lihat penggok an kidul sd 1 nduwur wet pelem karo koco moto ireng sakne cah do di goleki keluargane</p>
-      <p>Mohon jika melihat ilham, silahkan menghubungi nomor di bawah ini kakak.</p>
+      <p><strong>Nama:</strong> Kahlil</p>
+      <p><strong>Umur:</strong> 18 tahun</p>
+      <p><strong>Alamat:</strong> Parinring</p>
+      <p><strong>Terakhir Dilihat:</strong> Di Borong Lagi Isap Lem</p></p>
+      <p>Mohon jika melihat kahlil, silahkan menghubungi nomor di bawah ini kakak.</p>
     </section>
-    <a href="tel:+6283102935223" class="contact" aria-label="Hubungi nomor kakak Hanafi di 62 831 0293 5223">
+    <a href="tel:+6285753660268" class="contact" aria-label="Hubungi nomor kakak Hanafi di 62 831 0293 5223">
       <span class="material-icons" aria-hidden="true">call</span>
-      Hubungi: +62 831-0293-5223
+      Hubungi: +62 857-5366-0268
     </a>
   </main>
   <footer>
