--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Berita Orang Hilang - Ilham</title>
+<title>Berita Orang Hilang</title>
 <link
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
   rel="stylesheet"
@@ -222,7 +222,7 @@
       <p><strong>Terakhir Dilihat:</strong> Di Borong Lagi Isap Lem</p></p>
       <p>Mohon jika melihat kahlil, silahkan menghubungi nomor di bawah ini kakak.</p>
     </section>
-    <a href="tel:+6285753660268" class="contact" aria-label="Hubungi nomor kakak Hanafi di 62 831 0293 5223">
+    <a href="https://wa.me/+6285753660268" class="contact" aria-label="Hubungi nomor kakak Hanafi di 62 831 0293 5223">
       <span class="material-icons" aria-hidden="true">call</span>
       Hubungi: +62 857-5366-0268
     </a>
